bad request message in progress & List or find in progress